fix:spacing fix on contact container
adjusted to work on more devices

--- a/style.css
+++ b/style.css
@@ -357,6 +357,8 @@ article .icon {
 
 #projects {
     position: relative;
+    padding-bottom: 4rem;
+    margin-bottom: 4rem;
 }
 
 .color-container {
@@ -387,8 +389,6 @@ article .icon {
     justify-content: center;
     flex-direction: column;
     height: 70vh;
-    padding-top: 30rem;
-    margin-top: 30rem;
 }
 
 .contact-info-upper-container {
